--- a/ios/demo/GWIoTAPIDemo/Info.plist
+++ b/ios/demo/GWIoTAPIDemo/Info.plist
@@ -8,51 +8,12 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>zhiduodev</string>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>huaweizhixuan-test.zhiduodev.com</string>
+				<string>gw+yourAPPID</string>
 			</array>
 		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>payJumpBack</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>zxiosvasapi.zhiduodev.com</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>HiLink</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>hilink</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>SensorsData.production</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>sad996b0dc</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>reoqoo</string>
-			</array>
-		</dict>
-		<dict/>
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
@@ -90,31 +51,5 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Reoqoo requires your permission to access the camera to use the QR code scanning feature.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Require location authorization to help smart devices to connect with Wifi during connection process and confirm whether the App enters into ap mode or not( LAN working mode of mobile phone and smart devices) enable or not?</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>To successfully added equipment, you need allow the use of the Location Services for getting Wi-Fi information.Please turn on Location Services.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Require location authorization to help smart devices to connect with Wifi during connection process and confirm whether the App enters into ap mode or not( LAN working mode of mobile phone and smart devices) enable or not?</string>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Reoqoo requires your permission to access the Bluetooth in order to access Bluetooth devices.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Reoqoo requires your permission to access the photo library in order to use the QR code scanning feature.</string>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>In order to recommend better intelligent hardware products to you, we need to obtain your IDFA</string>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>Reoqoo requires your permission to access the Bluetooth in order to access Bluetooth devices.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Reoqoo requires your permission to access the photo library in order to save device QR codes to the system album.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Reoqoo requires your permission to access the microphone to use the intercom feature.</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Reoqoo requires your permission to access the photo library in order to use the QR code scanning feature.</string>
-	<key>NSLocationUsageDescription</key>
-	<string>Require location authorization to help smart devices to connect with Wifi during connection process and confirm whether the App enters into ap mode or not( LAN working mode of mobile phone and smart devices) enable or not?</string>
-	<key>NSLocalNetworkUsageDescription</key>
-	<string>Reoqoo requires your permission to access the local network for device connections.</string>
 </dict>
 </plist>
