feature： 更新GWIOT版本，以及插件版本

--- a/android/demo/app/build.gradle
+++ b/android/demo/app/build.gradle
@@ -99,8 +99,8 @@ dependencies {
 }
 
 dependencies {
-    implementation "com.gwell:gwiotapi:1.2.2.0"
-    implementation("com.yoosee.gw_plugin_hub:impl_main:google-release-6.32.2.0.18") {
+    implementation "com.gwell:gwiotapi:1.2.1.0"
+    implementation("com.yoosee.gw_plugin_hub:impl_main:google-release-6.32.2.0.20") {
         exclude group: 'com.google.android.material'
         exclude(group: 'com.yoosee.gw_plugin_hub', module: 'liblog_release')
         exclude(group: 'com.gwell', module: 'iotvideo-multiplatform')
@@ -108,6 +108,9 @@ dependencies {
         exclude(group: 'androidx.activity', module: 'activity-ktx')
         exclude(group: 'com.gwell', module: 'gwiotapi')
         exclude(group: 'com.tencentcs', module: 'txtraevoip')
+    }
+    implementation("com.reoqoo.gw_plugin_hub:main:google-release-01.05.25.0.17") {
+        exclude(group: 'com.gwell', module: 'gwiotapi')
     }
     
     
