--- a/android/demo/app/build.gradle
+++ b/android/demo/app/build.gradle
@@ -98,9 +98,11 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.51"
 }
 
+def yooseeVersion = "google-release-6.33.0.0.16"
+
 dependencies {
-    implementation "com.gwell:gwiotapi:1.2.12.0"
-    implementation("com.yoosee.gw_plugin_hub:impl_main:google-release-6.33.0.0.6") {
+    implementation "com.gwell:gwiotapi:1.2.14.0"
+    implementation("com.yoosee.gw_plugin_hub:impl_main:$yooseeVersion") {
         exclude group: 'com.google.android.material'
         exclude(group: 'com.yoosee.gw_plugin_hub', module: 'liblog_release')
         exclude(group: 'com.gwell', module: 'iotvideo-multiplatform')
@@ -109,7 +111,7 @@ dependencies {
         exclude(group: 'com.gwell', module: 'gwiotapi')
         exclude(group: 'com.tencentcs', module: 'txtraevoip')
     }
-    implementation("com.reoqoo.gw_plugin_hub:main:google-release-01.05.25.0.34") {
+    implementation("com.reoqoo.gw_plugin_hub:main:google-release-01.05.25.0.37") {
         exclude(group: 'com.gwell', module: 'gwiotapi')
     }
     
