--- a/android/demo/app/build.gradle
+++ b/android/demo/app/build.gradle
@@ -98,11 +98,12 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.51"
 }
 
-def yooseeVersion = "google-release-6.33.0.0.19"
+def yooseeKitVersion = "google-release-6.33.0.0.23"
+def reoqooKitVersion = "google-release-01.05.25.0.45"
 
 dependencies {
-    implementation "com.gwell:gwiotapi:1.3.0.0"
-    implementation("com.yoosee.gw_plugin_hub:impl_main:$yooseeVersion") {
+    implementation "com.gwell:gwiotapi:1.3.1.1"
+    implementation("com.yoosee.gw_plugin_hub:impl_main:$yooseeKitVersion") {
         exclude group: 'com.google.android.material'
         exclude(group: 'com.yoosee.gw_plugin_hub', module: 'liblog_release')
         exclude(group: 'com.gwell', module: 'iotvideo-multiplatform')
@@ -111,7 +112,7 @@ dependencies {
         exclude(group: 'com.gwell', module: 'gwiotapi')
         exclude(group: 'com.tencentcs', module: 'txtraevoip')
     }
-    implementation("com.reoqoo.gw_plugin_hub:main:google-release-01.05.25.0.41") {
+    implementation("com.reoqoo.gw_plugin_hub:main:$reoqooKitVersion") {
         exclude(group: 'com.gwell', module: 'gwiotapi')
     }
     
