--- a/android/demo/build.gradle
+++ b/android/demo/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     alias(libs.plugins.android.application) apply false
-    alias(libs.plugins.kotlin.android) apply false
-    id("com.google.dagger.hilt.android") version "2.51" apply false
+    id("org.jetbrains.kotlin.android") version "2.1.0" apply false
+    id("com.google.dagger.hilt.android") version "2.56.2" apply false
     id("com.google.gms.google-services") version "4.3.15" apply false
     id("cn.therouter.agp8") version "1.2.2" apply false
 }
